# NMC_Rust

./: README.md  package-lock.json
backend/: .env.example  .gitignore  Cargo.toml  build.rs
backend/src/: capture.rs  main.rs  websocket.rs
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  Map.jsx  index.css
