[package]
name = "network-traffic-visualizer"
version = "0.1.0"
edition = "2021"

[dependencies]
pnet = "0.34"
tokio = { version = "1.28", features = ["full"] }
tokio-tungstenite = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
maxminddb = "0.23"
futures = "0.3"
chrono = "0.4"

[build-dependencies]
pkg-config = "0.3"