[package]
name = "network-traffic-visualizer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0.0", features = ["full"] }
futures = { version = "0.3.17", features = ["std"] }
pnet = "0.34.0"
maxminddb = "0.23.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.31"
tokio-tungstenite = "0.20.1"
http = "0.2.9"